# EmployeeMonitoring

./: Dockerfile  README.md  deploy_back_and_front.sh  dev.env  docker-compose.yml  main.py  nginx.conf
back/: .gitignore  Dockerfile  config.py  contracts.py  docker-compose.yml  example.csv  feed_db.py  lggr.py  main.py  make_csv.py  openapi.json  pyproject.toml  utils.py
back/domain/: contracts.py  entities.py  initial_values.py
back/ext/alembic_tools/: commands.py
back/ext/http_tools/: __init__.py  handlers.py
back/ext/sqlalchemy_schema_factory/: __init__.py  conventions.py  factory.py
back/ports/rdbs/: __init__.py  generic.py
back/repositories/: __init__.py  business_unit.py  category.py  common.py  company.py  device.py  feedback.py  session.py  state.py  user.py
back/services/: __init__.py  category.py  device.py  feedback.py  notification.py  password.py  state.py  token.py  user.py
back/storages/: __init__.py  business_unit.py  common.py  company.py  user.py
back/tests/: conftest.py  test_register.py
back/workers/: foreman.py
front/: .gitignore  Dockerfile  README.md  app.py  app_layout.py  config.py  docker-compose.yaml  docker-compose.yml  index.html  main.py  package-lock.json  package.json  pyproject.toml  vue.config.js
front/public/: index.html
front/schemas/: __init__.py  login.py  register.py
front/src/: App.vue  main.js
front/views/: __init__.py  base_view.py  group_stats.py  login.py  main_page.py  manager_invite.py  manager_register.py  manager_self_registration.py  participant_card.py  participants_page.py
(+132 files in other folders)
