[tool.poetry]
name = "urfuapp"
version = "0.1.0"
description = ""
authors = ["serega <serega.taraskin.1999@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.9.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
